/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    // Apply the maven-publish plugin to publish the library
    id 'maven-publish'

    id 'eclipse'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
    withJavadocJar()
    withSourcesJar()
}

javadoc {
    exclude 'com/capstone4j/internal/**'
}

// Configure javadoc to enable preview features
tasks.withType(Javadoc).configureEach {
    options.addBooleanOption('-enable-preview', true)
    options.addStringOption('-source', '24')
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

eclipse.jdt.file.withProperties { props ->
    props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
    props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
}

// Configure publishing
publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = project.group
            artifactId = 'capstone-core'
            version = project.version
            
            from components.java
            
            pom {
                name = 'Capstone Java'
                description = project.description
            }
        }
    }
    repositories {
        // Add mavenLocal() repository to publish to local Maven repository
        mavenLocal()
    }
}
